# forecasting

./: .gitignore  README.md  pyproject.toml
forecasting/: timeseries.py
tests/timeseries/: test_timeseries.py  ts_corr_dummy.json  ts_multi_col_multi_idx_dummy.json  ts_multi_idx_dummy.json
